
[TestLexingKeywords - 1]
[]parser.Token{
    {
        Kind: &parser.TFn{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:3},
        },
    },
    {
        Kind: &parser.TVar{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:4},
            End:   parser.Location{Line:1, Column:7},
        },
    },
    {
        Kind: &parser.TVal{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:8},
            End:   parser.Location{Line:1, Column:11},
        },
    },
}
---

[TestLexingOperators - 1]
[]parser.Token{
    {
        Kind: &parser.TPlus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:2},
        },
    },
    {
        Kind: &parser.TMinus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:3},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TAsterisk{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
    },
    {
        Kind: &parser.TSlash{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:7},
            End:   parser.Location{Line:1, Column:8},
        },
    },
    {
        Kind: &parser.TEquals{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:9},
            End:   parser.Location{Line:1, Column:10},
        },
    },
}
---

[TestLexingIdentifiers - 1]
[]parser.Token{
    {
        Kind: &parser.TIdentifier{Value:"foo"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"bar"},
        Span: parser.Span{
            Start: parser.Location{Line:2, Column:1},
            End:   parser.Location{Line:2, Column:4},
        },
    },
}
---

[TestLexingLiterals - 1]
[]parser.Token{
    {
        Kind: &parser.TString{Value:"hello"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:7},
        },
    },
}
---

[TestLexingParens - 1]
[]parser.Token{
    {
        Kind: &parser.TIdentifier{Value:"a"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:1},
            End:   parser.Location{Line:1, Column:2},
        },
    },
    {
        Kind: &parser.TAsterisk{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:3},
            End:   parser.Location{Line:1, Column:4},
        },
    },
    {
        Kind: &parser.TOpenParen{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:5},
            End:   parser.Location{Line:1, Column:6},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"b"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:6},
            End:   parser.Location{Line:1, Column:7},
        },
    },
    {
        Kind: &parser.TPlus{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:8},
            End:   parser.Location{Line:1, Column:9},
        },
    },
    {
        Kind: &parser.TIdentifier{Value:"c"},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:10},
            End:   parser.Location{Line:1, Column:11},
        },
    },
    {
        Kind: &parser.TCloseParen{},
        Span: parser.Span{
            Start: parser.Location{Line:1, Column:11},
            End:   parser.Location{Line:1, Column:12},
        },
    },
}
---
